--- a/packages/lighting/automations/lights_outside.yaml
+++ b/packages/lighting/automations/lights_outside.yaml
@@ -78,7 +78,7 @@ automation:
           - light.lights_whole_night
 
   ## While awake
-  - alias: "Turn on outside lights and check every minute - whole awake"
+  - alias: "Turn on outside lights and check every minute - while awake"
     trigger:
       - platform: time_pattern
         # You can also match on interval. This will match every x minutes
@@ -98,20 +98,18 @@ automation:
     action:
       - service: light.turn_on
         data_template:
-          entity_id: >
-            light.lights_while_awake
-      #      {% if is_state('input_boolean.pool_cover_on','off') %},{{ " " }}light.pool_pool{% endif -%}
+        entity_id:
+          - light.lights_while_awake
       - condition: state
         entity_id: input_boolean.guest
         state: 'on'
       - service: light.turn_on
-        data_template:
-          entity_id: >
-            light.lights_while_awake_with_guests
+        entity_id:
+          - light.lights_while_awake_with_guests
 
 
   ## While not awake
-  - alias: "Turn off outside lights and check every minute - whole not awake"
+  - alias: "Turn off outside lights and check every minute - while not awake"
     trigger:
       - platform: time_pattern
         # You can also match on interval. This will match every x minutes
