--- a/custom_components/openai_tts/manifest.json
+++ b/custom_components/openai_tts/manifest.json
@@ -9,6 +9,6 @@
   "documentation": "https://github.com/sfortis/openai_tts/",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/sfortis/openai_tts/issues",
-  "requirements": [],
-  "version": "0.3.2"
+  "requirements": ["aiohttp>=3.9.0"],
+  "version": "3.5"
 }
