--- a/packages/security/device_tacker_triggers.yaml
+++ b/packages/security/device_tacker_triggers.yaml
@@ -1,38 +1,26 @@
 ---
 
-binary_sensor:
-  platform: template
-  sensors:
-    pixel_8_phone_charging:
-      friendly_name: "Is Pixel 8 phone charging"
-      unique_id: pixel_8_phone_charging
-      value_template: >-
-        {{ is_state('sensor.pixel_8_battery_state', 'charging')
-          or is_state('sensor.pixel_8_battery_state', 'full')
-          or is_state('sensor.pixel_8_battery_state', 'not_charging') }}
-
-    both_parent_phones_charging:
-      friendly_name: "Is both parents phones charging"
-      unique_id: both_parent_phones_charging
-      value_template: >-
-        {{ (is_state('sensor.pixel_8_battery_state', 'charging')
-          or is_state('sensor.pixel_8_battery_state', 'full')
-          or is_state('sensor.pixel_8_battery_state', 'not_charging'))
-          and (is_state('sensor.pixel_7a_battery_state', 'charging')
-          or is_state('sensor.pixel_7a_battery_state', 'full')
-          or is_state('sensor.pixel_7a_battery_state', 'not_charging')) }}
-      # silly workaround needed - mi9t phone shows not_charging when in fact charging...
-
-    either_parent_phones_charging:
-      friendly_name: "Is either parents phones charging"
-      unique_id: either_parent_phones_charging
-      value_template: >-
-        {{ (is_state('sensor.pixel_8_battery_state', 'charging')
-          or is_state('sensor.pixel_8_battery_state', 'full')
-          or is_state('sensor.pixel_8_battery_state', 'not_charging'))
-          or (is_state('sensor.pixel_7a_battery_state', 'charging')
-          or is_state('sensor.pixel_7a_battery_state', 'full')
-          or is_state('sensor.pixel_7a_battery_state', 'not_charging')) }}
+template:
+- binary_sensor:
+  - unique_id: pixel_8_phone_charging
+    default_entity_id: binary_sensor.pixel_8_phone_charging
+    name: Is Pixel 8 phone charging
+    state: "{{ is_state('sensor.pixel_8_battery_state', 'charging')\n  or is_state('sensor.pixel_8_battery_state',
+      'full')\n  or is_state('sensor.pixel_8_battery_state', 'not_charging') }}"
+  - unique_id: both_parent_phones_charging
+    default_entity_id: binary_sensor.both_parent_phones_charging
+    name: Is both parents phones charging
+    state: "{{ (is_state('sensor.pixel_8_battery_state', 'charging')\n  or is_state('sensor.pixel_8_battery_state',
+      'full')\n  or is_state('sensor.pixel_8_battery_state', 'not_charging'))\n  and
+      (is_state('sensor.pixel_7a_battery_state', 'charging')\n  or is_state('sensor.pixel_7a_battery_state',
+      'full')\n  or is_state('sensor.pixel_7a_battery_state', 'not_charging')) }}"
+  - unique_id: either_parent_phones_charging
+    default_entity_id: binary_sensor.either_parent_phones_charging
+    name: Is either parents phones charging
+    state: "{{ (is_state('sensor.pixel_8_battery_state', 'charging')\n  or is_state('sensor.pixel_8_battery_state',
+      'full')\n  or is_state('sensor.pixel_8_battery_state', 'not_charging'))\n  or
+      (is_state('sensor.pixel_7a_battery_state', 'charging')\n  or is_state('sensor.pixel_7a_battery_state',
+      'full')\n  or is_state('sensor.pixel_7a_battery_state', 'not_charging')) }}"
 
 automation:
   - alias: Parents both in bed when both phones charge
